src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    @apply bg-[#fefefe] text-white overflow-hidden;
    -webkit-font-smoothing: antialiased;
}

@media (max-width: 425px) {
    #scrollableBills::-webkit-scrollbar {
        display: none;
    }

    #scrollableBills {
        -ms-overflow-style: none;  /* IE and Edge */
        scrollbar-width: none;  /* Firefox */
    }
}

.select__control {
    @apply h-[66px] pl-4
}

